@@ -607,6 +607,8 @@ Argument FOR: just a required separator keyword to make code look better."
   (pel-autoload-function "pel-package" for:
     pel-install-from-elpa-attic)
 
+  (pel-autoload "pel-perl" for: pel-perl-critic)
+
   (pel-autoload "pel-pathmng" for: pel-emacs-load-path)
 
   (pel-autoload "pel-plantuml" for: pel-render-commented-plantuml)
